# elaboradar

./: .copr.enc  .gitignore  .moncic-ci.yml  .travis-build.sh  .travis.yml  Makefile.am  README  README.md  Trap-GAT.txt  Trap-SPC-nozdr.txt  Trap-SPC.txt  configure.ac  cum_bac.dox  elaboradar.pc.in  matrix-GAT-nozdr.txt  matrix-GAT.txt  matrix-SPC.txt  matrix-spc-nozdr.txt  matrix-spc.txt  radarelab.pc.in
data/: FIRST_LEVEL_corto+medio_GAT_AUT_2011  FIRST_LEVEL_corto_GAT_2006_PRI-EST  FIRST_LEVEL_corto_GAT_PRI-EST_2011  FIRST_LEVEL_corto_SPC_2003  FIRST_LEVEL_corto_SPC_INV_2011  FIRST_LEVEL_medio_GAT  FIRST_LEVEL_medio_SPC
dati/: FIRST_LEVEL_corto+medio_GAT_INV_2011  FIRST_LEVEL_corto+medio_GAT_PRI-EST_2011  FIRST_LEVEL_corto+medio_SPC_AUT_2011  FIRST_LEVEL_corto+medio_SPC_INV_2011  FIRST_LEVEL_corto+medio_SPC_PRI-EST_2011  FIRST_LEVEL_corto_GAT_2003  FIRST_LEVEL_corto_GAT_2006_AUT  FIRST_LEVEL_corto_GAT_2006_INV  FIRST_LEVEL_corto_GAT_AUT_2011  FIRST_LEVEL_corto_GAT_AUT_2011_15el  FIRST_LEVEL_corto_GAT_INV_2011  FIRST_LEVEL_corto_GAT_PRI-EST_15el  FIRST_LEVEL_corto_SPC_2006_AUT  FIRST_LEVEL_corto_SPC_2006_INV  FIRST_LEVEL_corto_SPC_2006_PRI-EST  FIRST_LEVEL_corto_SPC_AUT_2011  FIRST_LEVEL_corto_SPC_AUT_2011_alberi_2023-05-30-09-30  FIRST_LEVEL_corto_SPC_AUT_2011_alberi_2024  FIRST_LEVEL_corto_SPC_INV_2011  FIRST_LEVEL_corto_SPC_INV_2011_15el  FIRST_LEVEL_corto_SPC_INV_2011_alberi_2023-05-30-09-30  FIRST_LEVEL_corto_SPC_INV_2011_alberi_2024  FIRST_LEVEL_corto_SPC_PRI-EST_15el  FIRST_LEVEL_corto_SPC_PRI-EST_2011  FIRST_LEVEL_corto_SPC_PRI-EST_2011_alberi_2023-05-30-09-30  FIRST_LEVEL_corto_SPC_PRI-EST_2011_alberi_2024  FIRST_LEVEL_corto_SPC_PRI_EST_2011  FIRST_LEVEL_medio_GAT  FIRST_LEVEL_medio_SPC  FIRST_LEVEL_medio_SPC_alberi_2023-05-30-09-30  Makefile.am  Trap-GAT-nozdr.txt  Trap-GAT.txt  matrix-GAT.txt  matrix-SPC-nozdr.txt
debian/: changelog  control  copyright  libelaboradar-dev.install  libelaboradar0.install  libelaboradar0.shlibs  libradarelab-dev.install  libradarelab-doc.docs  libradarelab0.install  libradarelab0.shlibs  rules
doc/: Doxyfile  Makefile.am
elaboradar/: Makefile.am  azimuthmap.cpp  azimuthmap.h  elev_fin.h  image.cpp  image.h  loader.h  logging.h  matrix.h  odim.cpp  odim.h  sp20.cpp  sp20.h  utils.cpp  volume.cpp  volume.h
elaboradar/algo/: anaprop.cpp  anaprop.h  azimuth_resample.cpp  azimuth_resample.h  cleaner.cpp  cleaner.h  dbz.cpp  dbz.h  elabora_volume.h  statistics.h  top.h  utils.h
elaboradar/sp20/: SP20read.cpp  func_SP20read.h
elaboradar/tests/: test-azimutmap.cpp  test-functions.cpp  test-volume.cpp
elaboradar/utils/: string.cc  string.h  sys.cc  sys.h  tests-main.cc  tests.cc  tests.h
esplosione/: .gitignore  0termico.prev.xz  201403010915_temp.Ngrad.xz  201403010915h_rayinf.txt.xz  201403010915mat_el.bin.xz  Makefile.am  last_vpr_GAT.xz  stat_elevchange.xz  vpr_GAT.xz  vpr_heat_GAT.xz
include/: FIR_filter.h  MP_par.h  Q_components.h  assets.h  cart.h  cartproducts.h  (+24 more)
radarelab/: Makefile  Makefile.am  Makefile.in  RadarSite.h  cart.cpp  cart.h  cylindrical.cpp  cylindrical.h  dbz.h  elev_fin.h  image.cpp  image.h  interpola_vpr.cpp  interpola_vpr.h  interpola_vpr_gsl.cpp  interpola_vpr_nr.cpp  loader.h  logging.h  matrix.h  odim.cpp  odim.h  par_class.h  sp20.cpp  sp20.h  utils.cpp  utils.h  volume.cpp  volume.h  vpr_par.h
radarelab/algo/: anaprop.cpp  anaprop.h  azimuth_resample.cpp  azimuth_resample.h  cleaner.cpp  cleaner.h  dbz.cpp  dbz.h  elabora_volume.cpp  elabora_volume.h  statistics.h  steiner.cpp  steiner.h  top.h  utils.h  viz.cpp  viz.h  vpr.cpp  vpr.h
radarelab/sp20/: func_SP20read.h  func_SP20toMDB.cpp  meteo_db.h  radar.h  range1.h  read_dbp.h  struct_SP20read.h
radarelab/tests/: test-azimutmap.cpp  test-functions.cpp  test-volume.cpp  tests-main.cc
radarelab/utils/: string.cc  string.h  subprocess.cc  subprocess.h  sys.cc  sys.h  term.cc  term.h  testrunner.cc  testrunner.h  tests-main.cc  tests.cc  tests.h
src/: AddCleanerQuantities.cpp  Makefile  Makefile.am  Makefile.ok  Q_components.c  Q_components.cpp  RunCleanID.cpp  algo_anaprop.cpp  algo_cleaner.cpp  algo_dbz.cpp  algo_steiner.cpp  algo_viz.cpp  assets.cpp  caricaradar.cpp  cart.cpp  cartproducts.cpp  classificatore.cpp  classifier.cpp  config.cpp  cum_bac.cpp  cum_bac_SP20.c  cum_bac_SP20.cpp  cum_bac_SP20_BB_VPR.c  cum_bac_SP20_BB_VPR.cpp  cum_bac_clparser.cpp  cylindrical.cpp  elaboradar.cpp  func_Q3d.c  func_Q3d.cpp  image.cpp  interpola_vpr.cpp  interpola_vpr_gsl.cpp  interpola_vpr_nr.cpp  logging.cpp  melting_layer.cpp  prova_make  setstat.c  setstat.cpp  setwork.c  setwork.cpp  (+13 more)
src/esplosione/: 0termico.prev  201403010915_temp.Ngrad  201403010915h_ray.txt  201403010915h_ray.txt.xz  201403010915h_rayinf.txt  201403010915mat_bloc.bin.xz  last_vpr_GAT  stat_bloc  stat_bloc.xz  stat_elevchange  temperature.txt  temperature.txt.xz  test_vpr  test_vpr.xz  vpr_GAT  vpr_hmax_GAT.xz
src/testdata/: 201401071530h_ray.txt.xz  201401071530h_rayinf.txt.xz  201401071530mat_bloc.bin.xz  201401071530mat_el.bin.xz  201401231530_temp.Ngrad.xz  201402060140h_ray.txt.xz  201402060140h_rayinf.txt.xz  201402060140mat_bloc.bin.xz  201402060140mat_el.bin.xz  201405091240h_ray.txt.xz  201405091240h_rayinf.txt.xz  201405091240mat_bloc.bin.xz  201405091240mat_el.bin.xz  DBP2_020520141110_BOLOGNA.xz  DBP2_060220140140_GATTATICO_mod.xz  MSG1400715300U.101.h5  temperature.txt.xz
src/testdata/20140206/: 0termico.prev
src/testdata/log4c_verbose/: log4crc
src/tests/: test-assets.cpp  test-azimutmap.cpp  test-cart.cpp  test-functions.cpp  test-interpola-vpr.cpp  test-processing.cpp  test-read.cpp  test-utils.cpp  test-volume.cpp  tests-main.cc
testdata/: .gitignore  201402060140h_ray.txt.xz  201402060140mat_el.bin.xz  201405091240h_ray.txt.xz  201405091240mat_bloc.bin.xz  DBP2_060220140140_GATTATICO.xz  DBP2_060220140140_GATTATICO_mod.xz  DBP2_070120141530_GATTATICO.xz  Makefile.am  dem_Gatta.txt.xz  dem_SanPi.txt.xz
testdata/vpr/: 0termico.prev.xz  201403010135h_ray.txt.xz  201403010135h_rayinf.txt.xz  last_vpr_GAT.xz  temperature.txt.xz  vpr_hmax_GAT.xz
(+16 files in other folders)
