pkgdatarootdir = $(datarootdir)/$(PACKAGE)

pkgdataroot_DATA = \
	FIRST_LEVEL_corto_GAT_2003 \
	FIRST_LEVEL_corto_GAT_2006_AUT \
	FIRST_LEVEL_corto_GAT_2006_INV \
	FIRST_LEVEL_corto_GAT_2006_PRI-EST \
	FIRST_LEVEL_corto_GAT_AUT_2011 \
	FIRST_LEVEL_corto_GAT_AUT_2011_15el \
	FIRST_LEVEL_corto_GAT_INV_2011 \
	FIRST_LEVEL_corto_GAT_INV_2011_15el \
	FIRST_LEVEL_corto_GAT_PRI-EST_2011 \
	FIRST_LEVEL_corto_GAT_PRI-EST_2011_15el \
	FIRST_LEVEL_corto+medio_GAT_AUT_2011 \
	FIRST_LEVEL_corto+medio_GAT_INV_2011  \
	FIRST_LEVEL_corto+medio_GAT_PRI-EST_2011 \
	FIRST_LEVEL_corto+medio_SPC_AUT_2011 \
	FIRST_LEVEL_corto+medio_SPC_INV_2011 \
	FIRST_LEVEL_corto+medio_SPC_PRI-EST_2011 \
	FIRST_LEVEL_corto_SPC_2003 \
	FIRST_LEVEL_corto_SPC_2006_AUT \
	FIRST_LEVEL_corto_SPC_2006_INV \
	FIRST_LEVEL_corto_SPC_2006_PRI-EST \
	FIRST_LEVEL_corto_SPC_AUT_2011 \
	FIRST_LEVEL_corto_SPC_AUT_2011_15el \
	FIRST_LEVEL_corto_SPC_AUT_2011_alberi_2023-05-30-09-30 \
	FIRST_LEVEL_corto_SPC_INV_2011 \
	FIRST_LEVEL_corto_SPC_INV_2011_15el \
	FIRST_LEVEL_corto_SPC_INV_2011_alberi_2023-05-30-09-30 \
	FIRST_LEVEL_corto_SPC_PRI-EST_2011 \
	FIRST_LEVEL_corto_SPC_PRI-EST_2011_15el \
	FIRST_LEVEL_corto_SPC_PRI-EST_2011_alberi_2023-05-30-09-30 \
        FIRST_LEVEL_corto_SPC_AUT_2011_alberi_2024 \
        FIRST_LEVEL_corto_SPC_INV_2011_alberi_2024 \
        FIRST_LEVEL_corto_SPC_PRI-EST_2011_alberi_2024 \
	FIRST_LEVEL_medio_GAT \
	FIRST_LEVEL_medio_SPC \
	FIRST_LEVEL_medio_SPC_alberi_2023-05-30-09-30 \
	FL_2003.DIM \
	FL_2006.DIM \
	matrix-GAT-nozdr.txt \
	matrix-GAT.txt \
	matrix-SPC-nozdr.txt \
	matrix-SPC.txt \
	Trap-GAT-nozdr.txt \
	Trap-GAT.txt \
	Trap-SPC-nozdr.txt \
	Trap-SPC.txt

EXTRA_DIST = $(pkgdataroot_DATA)
